--- a/sass/components/_body-background.scss
+++ b/sass/components/_body-background.scss
@@ -19,6 +19,19 @@
     }
   }
   &--clear{
-    display: none;
+    // display: none;
+
+    border-top-left-radius: rem(230px);
+    border-top-right-radius: rem(230px);
+
+    bottom: 0;
+    left: 50vw;
+    @media (min-width: 500px) {
+      left: 70vw;
+    }
+    @media (min-width: 1441px) {
+      position: fixed;
+      left: calc(50% + 300px);
+    }
   }
 }
