--- a/sass/layout/_main-sections.scss
+++ b/sass/layout/_main-sections.scss
@@ -1,6 +1,12 @@
 main {
+ position: relative;
+  overflow-x: hidden;
+  height: 100vh;
+}
+
+.main-wrapper{
   z-index: 1;
-  position: relative;
+  
   margin-left: auto;
   margin-right: auto;
   width: clamp(rem(310px), 84.9vw, rem(820px));
